--- a/escola-felipe/my-app/.env.local
+++ b/escola-felipe/my-app/.env.local
@@ -1,3 +1,10 @@
-# Variáveis de ambiente para produção
-# Adicione aqui as variáveis necessárias para o ambiente de produção
-# Exemplo: NEXT_PUBLIC_API_URL=https://api.exemplo.com
+# .env.local na raiz da pasta my-app
+
+# Credenciais REAIS do Firebase para o projeto escolafelipe-db365
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyDr-SDy3SrP4sON_tqEpuFddRL86-xrYbc"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="escolafelipe-db365.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="escolafelipe-db365"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="escolafelipe-db365.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="329346602038"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:329346602038:web:ee862c543ca0798f557497"
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-5MNYK1YLMK" # Para o Google Analytics, se estiver usando
