--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
+  "name": "escola-felipe",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "@vercel/kv": "^1.0.1",
     "firebase": "^11.9.1",
     "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^20.0.0",
     "@types/react": "^19.1.8",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.0.0"
   }
 }
